Adding more comments and creating utility and generic methods to help with decomposition in hand class